--- a/login.html
+++ b/login.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <h1>Login</h1>
-    <form action="#">
-        <input type="text">
-        <input type="text">
+    <form action="login" method="POST">
+        <input type="text" name="username" />
+        <input type="text" name="password" />
+        <button type="submit">Login</button>
     </form>
 </body>
 </html>
