Added feature social login

--- a/login.html
+++ b/login.html
@@ -13,5 +13,10 @@
         <input type="text" name="password" />
         <button type="submit">Login</button>
     </form>
+    <div class="share-wrap">
+        <button>Facebook</button>
+        <button>Twitter</button>
+        <button>Instagram</button>
+    </div>
 </body>
 </html>
