Added feature social register

--- a/regiser.html
+++ b/regiser.html
@@ -12,5 +12,10 @@
         <input type="text">
         <button>OK</button>
     </form>
+    <div>
+        <button>Facebook</button>
+        <button>Twitter</button>
+        <button>Instagram</button>
+    </div>
 </body>
 </html>
