Added github social login

--- a/login.html
+++ b/login.html
@@ -17,6 +17,7 @@
         <button>Facebook</button>
         <button>Twitter</button>
         <button>Instagram</button>
+        <button>Github</button>
     </div>
 </body>
 </html>
